2005-12-10 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-cairo.c: Remove
	* rsvg-convert.c: New utility called 'rsvg-convert'. Can convert a SVG to a PS, PDF, or PNG. Can accept
	SVG input from STDIN and output to STDOUT. Has a lot more flexibility and functionality than the old 'rsvg'
	program.
	
2005-12-09 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-shapes.c: don't attempt to round courners at all in a rect unless dx > 0 && dy > 0	

2005-12-07 Ray Strode <rstrode@redhat.com>

	* rsvg-base.c: remove the push call that's more probably wrong and 
	clean up leaked viewbox list node (bug 323436)
	* rsvg-shapes.c: call finalize cleanup function of node parent class in 
	path_node and poly_node free functions (bug 323435)
	* rsvg-structure.c: Ditto
	* rsvg-structure.h: Ditto
	
2005-12-04 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-defs.c: Plug a small mem leak found by Paolo Borelli (bug #322918)

2005-11-26 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Bump version number
	* *.c: C89 build fixes from jensgr@gmx.net (Jens Granseuer) - bug 322489
	* rsvg-cairo-render.c, rsvg.c, rsvg.h: Make mods to Caleb's latest work. Prefer to expose a Cairo API that can render an element by id, and then go from there.
	* rsvg.c: No need to g_new0() data since we'll be overwriting it anyway
	
2005-11-26 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-cairo-render.c, rsvg.c, rsvg.h: made that partial rendering api that I promised Rahga ages ago. Havn't tested yet.
	
2005-11-25 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: 2.13.3

2005-11-04 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-art-*.[ch]: Remove these files, as they've been replaced by Cairo. 
	Libart is dead. Long live libart!
	
2005-10-31 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.h: Revert API changes to make the Gimp folk happier
	* rsvg-base.c: Reflect that change elsewhere
	* test-display.c: Ditto
	* test-rsvg.c: Ditto
	* rsvg-cairo.c: Ditto
	
2005-10-25 Dom Lachowicz <cinamod@hotmail.com>
